@@ -11,6 +11,7 @@ A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+........S. [ZBX-11509] fixed system.run command parameter to be quoted only if it contains special characters (vso)
 .......PS. [ZBX-4661] fixed possible crash when Oracle database is not available (vso)
 ...G...... [ZBX-11397] fixed security best practices violation (TOCTOU) warning (vso)
 ..F....... [ZBX-11359] fixed event acknowledgement in triggers list view when last event is a recovery event (Gunars)
@@ -259,6 +260,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+........S. [ZBX-11509] fixed system.run command parameter to be quoted only if it contains special characters (vso)
 .......PS. [ZBX-4661] fixed possible crash when Oracle database is not available (vso)
 ...G...... [ZBX-11397] fixed security best practices violation (TOCTOU) warning (vso)
 ..F....... [ZBX-11445] fixed update of item host interface from items massupdate form (Cemeris)
@@ -1806,6 +1808,7 @@ New features:
 ........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
 
 Bug fixes:
+........S. [ZBX-11509] fixed system.run command parameter to be quoted only if it contains special characters (vso)
 ...G...... [ZBX-11397] fixed security best practices violation (TOCTOU) warning (vso)
 .......PS. [ZBX-4661] fixed possible crash when Oracle database is not available (vso)
 ..F....... [ZBX-11521] fixed JS error in media popup (Oleg)
